# EarPerkOSC

./: Cargo.toml  EarPerkOSC.rc  EarPerkOSC.sln  EarPerkOSC.vcxproj  README.md  app.cpp  app.hpp  audio_processor.cpp  audio_processor.hpp  build_debug.bat  build_installer.bat  build_release.bat  config.cpp  config.hpp  config.ini  find_msbuild.bat  glad.c  imgui.ini  main.cpp  osc_sender.cpp  osc_sender.hpp  volume_analyzer.hpp
installer/: README.md  app_installer.nsi
oscpp/: client.hpp  error.hpp  print.hpp  server.hpp  types.hpp  util.hpp
oscpp/detail/: endian.hpp  host.hpp  stream.hpp
src/: audio.rs  config.rs  info.rs  init.rs  logging.rs  main.rs  osc.rs  process.rs  ui.rs
