[package]
name = "ear_perk_osc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# add wasapi dep 0.14.0
[dependencies]
winapi = { version = "0.3.9", features = ["audioclient", "mmdeviceapi", "combaseapi", "mmreg", "audiosessiontypes"] }
ms_dtyp = "0.0.3"
cpal = "0.15.2"
rosc = "0.10.1"
rust-ini = "0.20.0"
ctrlc = "3.4.2"