[package]
name = "ear_perk_osc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# add wasapi dep 0.14.0
[dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "wincon"] }
wasapi = "0.14.0"
ms_dtyp = "0.0.3"
rosc = "0.10.1"
rust-ini = "0.20.0"
ctrlc = "3.4.2"
lazy_static = "1.4.0"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.14"
chrono = "0.4.33"